--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -9,7 +9,7 @@
     tools:context=".SetupActivity">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/setup_profile_image"
+        android:id="@+id/nav_profile_image"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_centerHorizontal="true"
@@ -22,7 +22,7 @@
         android:id="@+id/setup_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/setup_profile_image"
+        android:layout_below="@id/nav_profile_image"
         android:layout_centerVertical="true"
         android:layout_marginLeft="7dp"
         android:layout_marginTop="5dp"
