--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,19 @@
                 android:layout_height="match_parent" />
 
         </FrameLayout>
+        <ImageView
+            android:id="@+id/add_new_post_button"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/add_post_high"
+            android:scaleType="centerCrop"
+            android:layout_marginBottom="4dp"
+            android:layout_marginRight="12dp"
+            android:background="@color/colorPrimaryDark"
+            android:baselineAlignBottom="false"
+            android:focusableInTouchMode="false"
+            android:layout_above="@+id/main_container"
+            android:layout_width="48dp"
+            android:layout_height="48dp" />
     </RelativeLayout>
 
     <com.google.android.material.navigation.NavigationView
