--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -24,7 +24,7 @@
         android:background="#fff"/>
 
     <EditText
-        android:id="@+id/post_description"
+        android:id="@+id/click_post_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/select_post_image"
@@ -42,7 +42,7 @@
         android:id="@+id/update_post_button"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/post_description"
+        android:layout_below="@id/click_post_description"
         android:layout_alignParentBottom="false"
         android:layout_centerInParent="true"
         android:layout_marginTop="10dp"
