--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -9,7 +9,7 @@
     tools:context=".SetupActivity">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/nav_profile_image"
+        android:id="@+id/setup_profile_image"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_centerHorizontal="true"
