--- a/app/src/main/res/layout/all_posts_layout.xml
+++ b/app/src/main/res/layout/all_posts_layout.xml
@@ -3,48 +3,56 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginBottom="4dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp">
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="4dp"
+        android:background="@drawable/post_border"
+        android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="1dp"
-            android:padding="5dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:padding="5dp">
+
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/post_profile_image"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:src="@drawable/profile"
+                android:layout_marginLeft="4dp"
                 android:scaleType="centerCrop"
-                android:layout_marginLeft="4dp"/>
+                android:src="@drawable/profile" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+
                 <TextView
                     android:id="@+id/post_user_name"
-                    android:text="user name"
-                    android:layout_marginTop="8dp"
-                    android:paddingLeft="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:paddingLeft="5dp"
+                    android:text="user name"
                     android:textAlignment="textStart"
+                    android:textColor="@android:color/black"
                     android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:textColor="@android:color/black"/>
+                    android:textStyle="bold" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
                     android:layout_marginLeft="5dp"
+                    android:orientation="horizontal"
                     android:padding="2dp">
+
                     <TextView
                         android:id="@+id/post_text"
                         android:layout_width="wrap_content"
@@ -52,21 +60,23 @@
                         android:text="post"
                         android:textColor="@android:color/darker_gray"
                         android:textSize="13sp"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
+
                     <TextView
                         android:id="@+id/post_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Date"
                         android:textColor="@android:color/darker_gray"
-                        android:textSize="13sp"/>
+                        android:textSize="13sp" />
+
                     <TextView
                         android:id="@+id/post_time"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Time"
                         android:textColor="@android:color/darker_gray"
-                        android:textSize="13sp"/>
+                        android:textSize="13sp" />
 
 
                 </LinearLayout>
@@ -76,23 +86,23 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/post_description"
+            android:id="@+id/click_post_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Post Decription.."
             android:layout_marginLeft="3dp"
             android:layout_marginRight="3dp"
             android:paddingLeft="3dp"
-            android:textSize="14sp"
-            android:textColor="@android:color/black"/>
+            android:text="Post Decription.."
+            android:textColor="@android:color/black"
+            android:textSize="14sp" />
+
         <ImageView
-            android:id="@+id/post_image"
+            android:id="@+id/click_post_image"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_margin="3dp"
             android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
-            />
+            android:scaleType="centerCrop" />
     </LinearLayout>
 
 </RelativeLayout>
