show comment and login with google

--- a/app/src/main/res/layout/all_posts_layout.xml
+++ b/app/src/main/res/layout/all_posts_layout.xml
@@ -103,6 +103,34 @@
             android:layout_margin="3dp"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp">
+            <ImageButton
+                android:id="@+id/like_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/dislike" />
+            <TextView
+                android:id="@+id/display_no_of_like"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0 Like"
+                android:padding="15dp"
+                android:textColor="#000"
+                android:textSize="14sp"
+                android:textStyle="bold"/>
+            <ImageButton
+                android:id="@+id/comment_button"
+                android:layout_marginLeft="150dp"
+                android:baselineAlignBottom="false"
+                android:src="@drawable/comment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
